Tweak background position on small logo classes to avoid artifacts from neighboring logo in sprite

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -1396,15 +1396,15 @@ h2.logo a {
 }
 .jquery-mobile.logo.small {
   width: 122px;
-  background-position: -441px 0px;
+  background-position: -442px 0px;
 }
 .qunitjs.logo.small {
   width: 105px;
-  background-position: -563px 0px;
+  background-position: -564px 0px;
 }
 .sizzlejs.logo.small {
   width: 105px;
-  background-position: -668px 0px;
+  background-position: -669px 0px;
 }
 
 #logo-events aside {
